Fix for dark mode on transparent images.

--- a/themes/alloc/css/style.css
+++ b/themes/alloc/css/style.css
@@ -16,6 +16,10 @@
     --nav-link-color: gainsboro;
     --main-code-color: lightgray;
   }
+
+  img {
+    background-color: white;
+  }
 }
 
 pre {
